# PingPong

./: .gitignore  CMakeLists.txt
cmake/compilers/: clang.cmake  gcc.cmake  msvc.cmake
scripts/prj/: gen_vs2022.bat  get_make.sh  get_xcode.sh
sources/: Config_App.h  Config_Platforms.h
sources/app/: Config_Platforms.h  Globals.h  GlobalsData.cpp  GlobalsData.h  InputData.h  InputSystem.h
sources/app/entry/android/: android_main.cpp
sources/app/entry/win/: win_main.cpp
sources/app/input/: InputData.cpp
sources/app/logger/: ErrrorLoggerWinImpl.inl
sources/app/renderer/: DX11Renderer.h  OpenGLRenderer.h  RenderSystem.h  Renderer.h
sources/core/: Config_App.h  Config_Platforms.h
workspaces/android/: settings.gradle.kts
workspaces/android/app/: build.gradle.kts
workspaces/android/app/src/androidTest/java/com/silentnight/pingpong/: ExampleInstrumentedTest.java
workspaces/android/app/src/main/: AndroidManifest.xml
workspaces/android/app/src/main/java/com/silentnight/pingpong/: MainActivity.java
workspaces/android/app/src/main/res/values/: themes.xml
workspaces/android/app/src/main/res/values-night/: themes.xml
workspaces/android/app/src/test/java/com/silentnight/pingpong/: ExampleUnitTest.java
workspaces/android/gradle/: libs.versions.toml
workspaces/android/gradle/wrapper/: gradle-wrapper.properties
